objects/fferpcore__MessagingSubscription__c.object
<CustomObject>
    <customHelpPage>fferpcore__MessagingSubscriptionHelp</customHelpPage>
    <fields>
        <fullName>fferpcore__BulkCapacity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Batch Delivery Capacity</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__CorrelationField__c</fullName>
        <label>Correlation Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Custom__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether or not this subscription has been made by the user</description>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__DeclarativeMappingCount__c</fullName>
        <label>Number of Declarative Mappings</label>
        <summaryForeignKey>fferpcore__DSCustomMapping__c.fferpcore__Subscription__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fferpcore__DeliverUsingBackgroundProcess__c</fullName>
        <description>Determines whether messages are delivered using a background process when the sender specifies that they are to be delivered now rather than later. If messages are scheduled for delivery later, the messages are delivered using a background process and this setting has no effect. When Capacity is selected, messages are delivered using a background process if the number of messages to be delivered exceeds the value set in the Synchronous Delivery Capacity field. The default value is Never.</description>
        <inlineHelpText>Determines whether messages are delivered using a background process when the sender specifies that they are to be delivered now.</inlineHelpText>
        <label>Deliver Using Background Process</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                    <default>true</default>
                    <label>Never</label>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Capacity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__DeliveryOrder__c</fullName>
        <defaultValue>500</defaultValue>
        <description>The batch delivery system will attempt to deliver message types in ascending order of this field. It groups messages by type to improve scalability.</description>
        <label>Delivery Sequence Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__Describer__c</fullName>
        <label>Describer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__DocumentationURL__c</fullName>
        <label>Documentation URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fferpcore__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send messages to this consumer.</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__ExcludeFromSelf__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls whether this subscription excludes messages sent by the same product.</description>
        <label>Exclude Own Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__Filters__c</fullName>
        <description>Serialised filters.</description>
        <label>Filters</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__HandlerData__c</fullName>
        <label>Handler Data</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__Handler__c</fullName>
        <description>Class name of the message handler. Implements the MessageHandler interface</description>
        <inlineHelpText>The class which determines how messages are handled.</inlineHelpText>
        <label>Handler Class</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Identifier__c</fullName>
        <label>Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__LinkControlDeveloperName__c</fullName>
        <inlineHelpText>This field must be populated to enable object linking. Publication source objects that wish to link to this subscription target object should have specifically named fields that include this Link Control Developer Name.</inlineHelpText>
        <label>Link Control Developer Name</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fferpcore__LinkControlFor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is populated automatically when a Link Control subscription is created and should not be populated by the user.</inlineHelpText>
        <label>Link Control For</label>
        <referenceTo>fferpcore__MessagingPublication__c</referenceTo>
        <relationshipLabel>Link Control Subscription</relationshipLabel>
        <relationshipName>LinkControlSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__MessageType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Message Type</label>
        <referenceTo>fferpcore__MessageType__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__Obsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No longer in use.</description>
        <inlineHelpText>Selecting Obsolete marks the subscription as no longer in use. It will not appear on the administration screen and cannot be enabled.</inlineHelpText>
        <label>Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__OwnerProduct__c</fullName>
        <label>Subscriber</label>
        <referenceTo>fferpcore__ERPProduct__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>MessagingSubscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fferpcore__ProductProxy__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Proxy</label>
        <referenceTo>fferpcore__ProductProxy__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__SynchronousDeliveryCapacity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Determines the maximum number of messages that can be delivered without using a background process when Deliver Using Background Process is set to Capacity.</description>
        <inlineHelpText>Determines the maximum number of messages that can be delivered without using a background process when Deliver Using Background Process is set to Capacity.</inlineHelpText>
        <label>Synchronous Delivery Capacity</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__TargetObject__c</fullName>
        <inlineHelpText>The object that will be modified based on messages received</inlineHelpText>
        <label>Target Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__UniquenessConstraint__c</fullName>
        <label>Uniqueness Constraint</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fferpcore__VirtualObjectConsumer__c</fullName>
        <description>The name of the Consumer invoked whenever a VirtualDataObject is received.</description>
        <inlineHelpText>The name of the Consumer invoked whenever a VirtualDataObject is received.</inlineHelpText>
        <label>Consumer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Subscription</label>
    <nameField>
        <label>Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>